# student_manage_system

./: .gitignore  CMakeLists.txt  account.c  account.h  admin_port.c  admin_port.h  file_util.c  file_util.h  link_list.c  link_list.h  main.c  safe_stdin.c  safe_stdin.h  str_to_int.h  student_link_list.c  student_link_list.h  student_port.c  student_port.h  student_sys.c  student_sys.h  teacher_port.c  teacher_port.h  user.c  user.h
